--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ org_address_suite: Suite 900
 org_city: Abeokuta
 org_state: Ogun
 org_zip: > # Enter zip on next line. Be sure to indent by two spaces.
-  94103
+  234
 org_phone: > # Enter phone on next line. Be sure to indent by two spaces.
   (123) 456-7890
 
@@ -47,7 +47,7 @@ publish: true
 
 #COLOR SCHEME
 #Select one of the five color schemes (default, one, two, three, or four)
-color_scheme: two
+color_scheme: one
 
 # *** DO NOT CHANGE ANYTHING BELOW THIS LINE ***
 
