--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ org_general_email_inbox: uphando_leadership@googlegroups.com
 org_street_address: Odegbami Crescent #Please include suite number on the line below
 org_address_suite: Olorunsogo
 org_city: Abeokuta
-org_state: Ogun, Nigeria
+org_state: Ogun State, Nigeria
 org_zip: > # Enter zip on next line. Be sure to indent by two spaces.
   234
 org_phone: > # Enter phone on next line. Be sure to indent by two spaces.
