--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,8 @@ org_name: UPHANDO EDUCATION SUPPORT INITIATIVE
 org_summary: > # Enter your summary on the next line. Be sure to indent by two spaces.
   An NGO committed to empowering youth through education, technology, skill acquisition, and healthcare empowerment.
 org_full_description: > # Enter your description on the next line. Be sure to indent by two spaces.
-  Ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.
+  Uphando Education Support Initiative is a Nigerian-based non-governmental organization (NGO) dedicated to empowering youth through education, technology, skill acquisition, and healthcare initiatives. We are actively involved in the development of artificial intelligence (AI) and language technologies with the goal of seeing them applied in sectors such as agriculture, healthcare, finance, legal services, and other areas that promote social good.
+  Through training, mentorship, and practical skill development, we equip young innovators and technologists to create solutions that address real-world challenges, drive innovation, and foster sustainable development across Nigeria and Africa.
 
 #OPTIONAL
 #Non US-address support coming soon
